force-app/main/default/objects/Assignment__c/fields/Allocation__c.field-meta.xml
<CustomField>
    <fullName>Allocation__c</fullName>
    <label>Allocation</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>