force-app/main/default/objects/Assignment__c/fields/Consultant__c.field-meta.xml
<CustomField>
    <fullName>Consultant__c</fullName>
    <label>Consultant</label>
    <type>Lookup</type>
    <referenceTo>Consultant__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>