force-app/main/default/objects/Assignment__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <type>Lookup</type>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>